--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mastodon-posts",
   "version": "0.1.2",
-  "private": false,
+  "private": true,
   "main": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
